--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>1.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>com.cedarsoft.commons</groupId>
+			<artifactId>image</artifactId>
+			<version>8.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
