--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ target
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/workspace.xml
-.idea/**/tasks.xml
+.idea/workspace.xml
 .idea/dictionaries
 
 # Sensitive or high-churn files:
