--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/.name
+cs480.eml
+cs480.userlibraries
+jsp/
