--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>com.cedarsoft.commons</groupId>
-			<artifactId>image</artifactId>
-			<version>8.3.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
 		</dependency>
 
 		<dependency>
