--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin</artifactId>
-			<version>7.0.0.alpha3</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.2-jre</version>
 		</dependency>
 
 		<dependency>
