--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 			</dependency>
+			
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.27-incubating</version>
+		</dependency>
 	</dependencies>
 
 	<build>
