--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.27-incubating</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
